# SPDX-FileCopyrightText: 2022 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "tor_ffi_plugin"
version = "0.1.0"
authors = ["Igor Cota <igor@foundationdevices.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
arti-client = { version = "0.19.0", features = ["static", "onion-service-client"] }
arti = { version = "1.2.4", features = ["experimental-api", "static"] }
tor-rtcompat = { version = "0.19.0", features = ["static", "native-tls", "tokio"] }
tor-config = "=0.19.0"
log = "0.4.20"
lzma-sys = { version = "0.1.20", features = ["static"] }
#android_log-sys = "0.3.1"
rlimit = "0.10.1"
anyhow = "1.0.79"

[build-dependencies]
cbindgen = "= 0.24.3"
glob = "0.3.1"
